# profile

./: .env.production  .gitignore  LICENSE  README.md  compose.yaml
backend/: .dockerignore  .env.development  .env.production.backend  Cargo.toml  Rocket.toml  backend.Dockerfile  backend.development.Dockerfile  backend.production.Dockerfile
backend/database/: models.rs
backend/migrations/2025-06-21-221110_quotes/: down.sql  up.sql
backend/migrations/2025-07-31-231628_TTC_SUBWAY_DELAY_DATA/: down.sql  up.sql
backend/migrations/2025-09-22-180144_create_station_geo_cache/: down.sql  up.sql
backend/src/: lib.rs  main.rs  models.rs  schema.rs  sql_types.rs
frontend/: .dockerignore  .env.development  .env.production  Cargo.toml  deno.json  frontend.Dockerfile  frontend.development.Dockerfile  frontend.production.Dockerfile  index.html  nginx.conf  playwright.config.ts  vite.config.mts
frontend/src/: App.css  App.tsx  main.rs  main.tsx
frontend/src/components/: DelayMap.jsx  DelayMapLeaflet.jsx  Footer.jsx  Header.jsx  Logo.jsx  NavBar.jsx  Title.jsx
frontend/src/components/content/: AboutMe.jsx  Contact.jsx  MainContent.jsx  ProfilePicture.jsx  Projects.jsx
frontend/src/game/starrunner/: index.html  starrunner.js
frontend/src/game/starrunner/assets/shaders/: p_orbital_shader.wgsl  s_orbital_shader.wgsl  starfield.wgsl  triangle.wgsl
frontend/src/game/starrunner/assets/ships/: spawn.ship.ron
frontend/src/hooks/: useQuotes.jsx  useTTCData.jsx
frontend/src/utilities/: codeDescriptions.json
frontend/tests/: profile.spec.ts
nginx/: nginx.dev.conf  (+1 more)
(+1 files in other folders)
