[package]
name = "profile_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"]}
rocket_cors = "0.6.0"
dotenvy = "0.15"
diesel = { version = "2.2.11", features = ["postgres", "chrono"] }
serde = "1.0.219"
chrono = {version="0.4.41", features =["serde"]}