[package]
name = "profile_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
reqwest = {version= "0.12.23", default-features = false, features = ["rustls-tls", "json"]}
rocket = { version = "0.5.1", features = ["json"]}
rocket_async_compression = "0.6.1"
tokio = "1.46.1"
urlencoding = "2.1.3"
